*Empty MediaWiki Message*

--- a/Cabdullaahi_Ciise.mw
+++ b/Cabdullaahi_Ciise.mw
@@ -51,21 +51,6 @@ Rome, Italy
 
 __TOC__
 
-== TAARIIKH NOLOLEEDKIISII ==
-abdulaahi cabdikaafi cabdi waxa uu ku dhashay gobolka nugaal gaar ahaan xarunta dawlada puntland ee magaalada garowe waxa uu dhashay sannadka markuu ahaa 26-juun 2001da.
-
-Dhalashadii ka dib abihii cabdikaafi cabdi waxa kasoo anbabaxay dalka ingiriiska gaar ahaan magalaada lond9n asagoo ku wajahnaa wicitaankii dalwadii uu hogaaminayey col.Cabdulaahi yuusuf axmed.
-
-Dhalashadii wiilkiisa ka dib waxa uu ugu magac daray madaxweynihii waqtigaas talada hayey ee puntland col.Cabdulaahi Yuusuf Axmed.
-
-Cabdulaahi cabdikaafi cabdi waxa uu dugsi hoose dhexe iyo sare ba ku qaatay magaalada garowe.
-
-Waxaa aas u cadacadaa qaar kamid ahaa fikradiisa oo ahaa
-
-1: iska hor taagii magaacii soomalida itoobiya uu aad u dhaleeceenayey kuma tilmaamayey inuu dhabar jab weyn ku yahay ummada soomaliyeed meel waliba ay joogaan
-
-2: Qoristii buugii uu ugu magac daray Dulmigii Dahsoonaa uu ku weerarayey dawladihii kala danbeeyey ee maamulka soomalida ee itoobiya gacanta ku hayso
-
-3: Fidintii mabaa di' yadii soomali weyn uuna ku tusay ummada somaaliyeed inay midowdo
-
-[[Category:Siyaasadda Soomaaliya]]
+Tariikhdiisi 
+Abdullahi wuxuu ku dhashay magalada afgooye oo gobolka shabeelada sanadu markay ahay  nov 1922.
+Abdullahi wuxuu noqday raisulwasaarihii u horeyay ee daakhiliga
