*Empty MediaWiki Message*

--- a/Pridi_Banomyong.mw
+++ b/Pridi_Banomyong.mw
@@ -1,3 +1,4 @@
 [[File:Pridi Banomyong-portrait.jpg|thumb]]
 '''Pridi Banomyong''' ([[Luuqada Thai|Thai]]: ปรีดี พนมยงค์; 11 Meey 1900 - 2 Meey 1983) wuxuu ahaa siyaasi Thai ah iyo aqoonyahan. Wuxuu ahaa Raiisel wasaare iyo madax sare oo Thailand ah, iyo dhalashadii dhalashadiisa waxaa xustey [[UNESCO]] sanadkii 2000.
 [[Category:Siyaasiyiinta Thai]]
+{{gumud}}
