*Empty MediaWiki Message*

--- a/Horumarinta_Bulshada.mw
+++ b/Horumarinta_Bulshada.mw
@@ -1,3 +1,4 @@
+{{wargelin|Qoraalka bogan waa mid uqoran si qaab daran ama ka samaysan luuqad qalaad. Fadlan naga caawi turjumaada.}}
 '''Horumarinta Bulshada''' wuxa looga gonleeyahay hagaajinta tayada nolosha (quality of life) ee muwaadiniinta dal gaar ah iyo kor u qaadidda beegaalka nolosha (Standard of living) ee dadkaas<ref><nowiki>{{cite web |url=</nowiki>https://www.jstor.org/journal/deveandsoci%7Ctitle=Horumarinta Bulshada|year=2016|publisher=[[Institute for Social Development and Policy Research (ISDPR)]]</ref>
 
 == DARYEELKA QOYSKA ==
