*Empty MediaWiki Message*

--- a/Cabdullaahi_Ciise.mw
+++ b/Cabdullaahi_Ciise.mw
@@ -1,4 +1,4 @@
-Allahu Akbar Allahu Abar Ilaah xaq lagu caabudo majiro Ilaahay mooyee waana kalidii wehelna malaha, Muxamadna waa Rasuulkii Ilaahay naxariis iyo nabad galyo korkiisa ha ahaato isaga iyo ehelkiisii iyo dhammaan inta rumaysay ee u gargaartay una hiilisay xaqana ku dhawaaqday. AAaaaaaamiiiiin
+{{gumud}}
 {| class="infobox" align="right" style="font-size: 95%; text-align: left;"
 |-
 |-
