*Empty MediaWiki Message*

--- a/Cabdullaahi_Ciise.mw
+++ b/Cabdullaahi_Ciise.mw
@@ -1,56 +1,22 @@
 {{gumud}}
-{| class="infobox" align="right" style="font-size: 95%; text-align: left;"
-|-
-|-
-|{{#if: |
-{{!}} colspan="2" style="font-size: smaller;  text-align: center;" {{!}} [[File:|200px]]<br />{{{caption|}}}}}
-| colspan="2" style="font-size: larger; text-align: center;" | '''
-Cabdullaahi Ciise'''<br 
-[[File:Cabdullaahi_Ciise.jpg|220px]]
-|-
-
-|-
-
-|-
-|'''Magaca'''
-|Cabdullaahi Ciise
-|-
-
-|-
-! Dhashay: 
-
-November 11, 1922
-Afgooye, Soomaalia
-
-| 
-| 
-<!--|-
-! Kudhintay:
-
-Maarso 11,1988 (65)
-Rome, Italy
-
-| [[]], [[]]-->
-|-
-! Diintiisa:
-| [[Islaam]]
-|-
-! Dhalasho:
-| '''{{{3|[[File:Flag_of_Somalia.svg|25px]]}}}''' [[Soomaaliya|Soomaali]]
-|-
-! Ururka:
-| Somali Youth League (SYL)
-|-
-|'''Shaqada''' 
-  1. Ra'iisul Wasaare 
-|
-|
-|}
-
+{{Infobox qof
+|name        = Cabdullahi Ciise <br /> عبد الله عيسى 
+|image       =Abdullahi Issa Mohamud.jpg
+| honorific-prefix = 
+|order       = [[Ra'iisul wasaarayaashii Soomaaliya|Ra'iisal Wasaarihii]] 1aad
+|president   = 
+|deputy      = 
+|term_start  = 29 February 1956
+|term_end    = 1 July 1960
+|predecessor = [[Ra'iisul wasaarayaashii Soomaaliya|Ra'iisal Wasaarihii]] 1aad
+|successor   = [[Maxamed Xaaji Ibraahim Cigaal]]
+|birth_date  = November 11, 1922
+|birth_place = [[Afgooye]], [[Italian Somaliland]]
+|death_date  = March 11, 1988 (Da'da 65)
+|death_place = [[Rome]], [[Italy]]
+|party       = [[Somali Youth League]]
+}}
 '''Cabdullaahi Ciise Maxamuud '''عبدالله عيسى محمواد waxuu dhashay uuna geeriyooday (1922-1988), Allahaa u naxariistee waxa uu ku dhashay degmada [[Afgooye]] ee gobolka [[Shabeellaha Hoose]] ee dalka [[Soomaaliya]]. Wuxuu ahaa halgamaa door weyn ka ciyaaray madaxbanaanida iyo qaranimada Soomaaliyeed, wuxuu kale oo uu ahaa raiisul wasaarahii ugu horeeyey dalka [[Soomaaliya]] ay yeelato ee dowladii daaqiliyada ahayd inta aysan [[Soomaaliya]] madaxbanaanida helin. 
-
-__TOC__
-
-Tariikhdiisi 
+==Hordhac==
 Abdullahi wuxuu ku dhashay magalada afgooye oo gobolka shabeelada sanadu markay ahay  nov 1922.
 Abdullahi wuxuu noqday raisulwasaarihii u horeyay ee daakhiliga
