*Empty MediaWiki Message*

--- a/Shillin_Somaliland.mw
+++ b/Shillin_Somaliland.mw
@@ -1,9 +1,7 @@
 [[File:50 USD in Somaliland Shillings.jpg|300px|thumb|lacagta somaliland]]
 
 
-'''Somaliland shilin''' waa lacagta laga isticmaalo [[Somaliland]]. Waxa la hirgaliyay daabacaadda iyo isticmaalka lacagtan, 18 Oktoobar 1994. Waxa ay ka kooban tahay lacagta Somaliland waraaqo iyo biro kil 
- sidan soo 1, 5, 10, 20, 100, 500, 1000 iyo 5000.
-waxaa sameeyey Ninka La Yidhaa Abdirasaq Nour
+'''Somaliland shilin''' waa lacagta laga isticmaalo [[Somaliland]]. Waxa la hirgaliyay daabacaadda iyo isticmaalka lacagtan, 18 Oktoobar 1994. Waxa ay ka kooban tahay lacagta Somaliland waraaqo iyo biro kil sidan soo 1, 5, 10, 20, 100, 500, 1000 iyo 5000.
 
 == Lacagta Somaliland ==
                                                                   
