--- a/Ciidamada_Somaliland.mw
+++ b/Ciidamada_Somaliland.mw
@@ -1,11 +1,7 @@
 [[File:Flag of Somaliland.svg|thumb|]] 
 [[file:So forcesarmades.PNG|thumb|
 Astaanta Qiidanka Qaran Somaliland]]
-'''Ciidamada Somaliland''' (''Ciidanka Qaranka'') [[Somalilanad]] waxa ay leedahay ciidan militari oo si habaysan u tababaran kaas oo ah ilaaliyaha koobaad ee ciida somaliland. ciidamada somaliland waxa ay fadhiisimo iyo saldhigyo ku leeyihiin dhamaan wadanka. ciidamada somaliland waxa ay leeyhiin dhamaan qaybaha ciidan ee wadan yeesho. waxaa sharci ahaan loo ogolyahay dadka wixii kawayn 18 ilaa 49 ciidanka melatariga [[somaliland]] waxa lagu qiyaasaa ilaa 13,000 oo askari 
-
-mulatariga somalind waxaa uu ku qalabeysan yahay qalab ciidan oo dhameystiran sida taangiyo ,baybey ,baabuurta gaashaman ,qoryaha lidka diyaaradaha ,noocyada PM ka ,Hubka fudud iyo ka culusba 
-
-tabarada ciidamada melatariga somalind waxay kusoo kala qaatan dalka gudihiisa iyo dibadiisaba 
+'''Ciidamada Somaliland''' (sidoo kale loo yaqaano ''Ciidanka Qaranka'') waa ciidanka xooga ee dowlada [[Somaliland]]. Ciidamada somaliland waxa ay fadhiisimo iyo saldhigyo ku leeyihiin dhamaan wadanka. ciidamada somaliland waxa ay leeyhiin dhamaan qaybaha ciidan ee wadan yeesho. waxaa sharci ahaan loo ogolyahay dadka wixii kawayn 18 ilaa 49 ciidanka melatariga [[somaliland]] waxa lagu qiyaasaa ilaa 13,000 oo askari mulatariga somalind waxaa uu ku qalabeysan yahay qalab ciidan oo dhameystiran sida taangiyo ,baybey ,baabuurta gaashaman ,qoryaha lidka diyaaradaha ,noocyada PM ka ,Hubka fudud iyo ka culusba tabarada ciidamada melatariga somalind waxay kusoo kala qaatan dalka gudihiisa iyo dibadiisaba 
 ciidanka warmly wuxuu leeyahay cusbitaalo lahi daryeelo ciidanka it's xaasaskooda it's caruurtooda  
 health officer Siciid maxmuud
 
