*Empty MediaWiki Message*

--- a/Blackpink.mw
+++ b/Blackpink.mw
@@ -5,10 +5,10 @@
 {{Infobox musical artist
 | name             = Blackpink
 | background       = group_or_band
-| image            = 20190106 (NEWSEN) 블랙핑크 (BLACKPINK), 수줍은 많은 소녀지만 돋보이는 아름다운 미모 (Golden Disc Awards 2019) (2).jpg
+| image            = 6월 23일 블랙핑크 팬사인회 06.jpg
 | landscape        = yes
 | alt              = 
-| caption          = Blackpink sanadka 2019<br /> Bidix ilaa midig: Rosé, Jennie, Lisa, iyo Jisoo
+| caption          = Blackpink sanadka 2019<br /> Bidix ilaa midig: Rosé, Lisa, Jennie iyo Jisoo
 | origin           = [[Seoul]], kuuriyada koonfureed
 | genre            = *K-pop
 *Electronic dance music
