*Empty MediaWiki Message*

--- a/Blackpink.mw
+++ b/Blackpink.mw
@@ -5,10 +5,10 @@
 {{Infobox musical artist
 | name             = Blackpink
 | background       = group_or_band
-| image            = 6월 23일 블랙핑크 팬사인회 06.jpg
+| image            = 181119 Acara Puncak Road to Shopee 12.12 Birthday Sale, Special Performance dari BlackPink (18).jpg
 | landscape        = yes
 | alt              = 
-| caption          = Blackpink sanadka 2019<br /> Bidix ilaa midig: Rosé, Lisa, Jennie iyo Jisoo
+| caption          = Blackpink sanadka 2019<br /> Bidix ilaa midig: Jisoo, Jennie, Rosé iyo Lisa
 | origin           = [[Seoul]], kuuriyada koonfureed
 | genre            = *K-pop
 *Electronic dance music
