--- a/Xarardheere.mw
+++ b/Xarardheere.mw
@@ -64,7 +64,7 @@
 '''Xarardheere''' ({{lang-ar|هرارديري}}) waa magaalo taariikhi ah oo ku taal gobolka [[Mudug]] ee Soomaaliya.
 
 == Taariikh== 
-Magaaladu waxey leedahay taariikh qadiimi ah oo u laabaneysa boqolaal sanno. Dadka caanka ah ee magaalada soo maray ama hadda ku nool waxaa ka mid ; Nabadoon Cadaceete, Guddoomiye Abdi dheere, Gaashaanle Ali Axmed Cosoble, Nabadoon Koofi, Sheikh Kulli, Gudoomiye Muxammed Sheikh, Guddomiye Abdisalaan Khaliif, Nabdoon Kobac, nabadoon Ciise geel jir, Nabadoon/Gnacasade Muxammed Adam Timajilac, Nabadoon/Ganacsade Buunde, Nabdoon Cusmaan Bood, Nabadoon Indhacade, Ustaad Xuseen Cali Cawaale, Usataad Abdirahman Moahmed Xuseen. 
+Magaaladu waxey leedahay taariikh qadiimi ah oo u laabaneysa boqolaal sanno. Dadka caanka ah ee magaalada soo maray ama hadda ku nool waxaa ka mid ; Nabadoon Cadaceete, Guddoomiye Abdi dheere, Gaashaanle Ali Axmed Cosoble, Nabadoon Koofi, Sheikh Kulli, Nabadoon Baraale Warsame, Gudoomiye Muxammed Sheikh, Guddomiye Abdisalaan Khaliif, Nabdoon Kobac, nabadoon Ciise geel jir, Nabadoon/Gnacasade Muxammed Adam Timajilac, Nabadoon/Ganacsade Buunde, Nabdoon Cusmaan Bood, Nabadoon Indhacade, Ustaad Xuseen Cali Cawaale, Usataad Abdirahman Moahmed Xuseen. 
 
 Magaalada iyo degmooyinka hoos yimaadaba waxa ay ka badbaadeen colaadihii sokeeyay ee ka dhacay guud ahaan Somaaliya gaar ahaanna gobolada dhexe ee Somaaliya,
 
