--- a/Boqortooyada_Midowday.mw
+++ b/Boqortooyada_Midowday.mw
@@ -3,7 +3,7 @@
   |titlestyle = background:transparent; font-size:9pt;
   |title = {{resize|11.5pt|{{nowrap|Midowga Boqortooyada Britan iyo Woqooyiga Ireland}}}}
    }}
- | common_name = Midowga Boqortooyada
+ | common_name = Midowga Boqortooyo
  | linking_name = the United Kingdom<!--for wikilinks – don't remove "the"-->
  | image_flag = Flag of the United Kingdom.svg
  | alt_flag = A flag featuring both cross and saltire in red, white and blue
@@ -126,6 +126,7 @@ Boqortooyada Ingiriisku waxay ahayd waddankii saddexaad ee horumarinta hubka nuk
 Hoggaamiyeyaasha wadamada xubnaha ka ah Midowga Yurub ee 2007. Boqortooyada Ingiriiska waxay ku biirtay Jaaliyadaha Dhaqaalaha Yurub sanadkii 1973-dii. Aftida lagu qabtay 1975, 67% codbixiyayaashu waxay u codeeyeen inay joogaan EEC, [127] laakiin 52% ayaa u codeeyay inay ka baxaan EU sannadka 2016. [128]
 Sannadkii 1960, Ingiriiska wuxuu ahaa mid ka mid ah toddobada xubnood oo ka mid ah Yurubta Bilaashka ah. Ururka Ganacsiga (EFTA), laakiin 1973 waxay ka tagtay inay ku biirto Beesha Yurub (EC). Markii Midowga Yurub uu noqday Midowga Yurub (EU) sanadkii 1992, UK waxay ka mid ahayd 12 xubnood oo aasaasay. Heshiiska Lisbon waxaa la saxiixay sannadkii 2007, kaas oo ah qaabka dastuuriga ah ee Midowga Yurub tan iyo markaas
 Meesha guud ee Boqortooyada Ingiriiska waa qiyaastii 243,610 kilomitir oo isku wareeg ah (94,060 sq mi). Wadanku wuxuu qayb ka yahay qaybta ugu muhiimsan ee Islaaxyada [141] oo ay ku jiraan jasiiradda Great Britain, waqooyi bari lixaad ee jasiiradda Irland iyo jasiiradaha yar yar ee ku xeeran. Waxay u dhaxeysaa Badda Waqooyiga Atlantik iyo Badda Waqooyi oo leh xeebta koonfureed ee ku taala xeebta waqooyiga Faransiiska, taas oo ay kala soocaan Ingiriisiga Kaniisada [221] Sannadkii 1993-kii 10% Boqortooyada Midowday ayaa laga beeri jiray, 46% ayaa loo isticmaalay daaqa iyo 25% oo beeraha lagu beeray. [143] Xafiiska Royal Greenwich Observatory ee London waa meesha ugu qeexan ee ah Meridian. [144]
+
 == Population ==
 
 [[File:Population_density_UK_2011_census.png|thumb|443x443px|Map of population density in the UK as at the 2011 census.]]
