*Empty MediaWiki Message*

--- a/Template:Maqaalo_Somaliland.mw
+++ b/Template:Maqaalo_Somaliland.mw
@@ -48,7 +48,7 @@
 * [[Deegaanka Somaliland|Deegaanka & Jiyoolojiga]]
 * [[Duurjoogta Soomaaliya|Duurjoogta]]
 * [[Soomaaliweyn]]
-* [[Category:Biyoshub Soomaaliya|Biyoshub]]
+* [[:Category:Biyoshub Soomaaliya|Biyoshub]]
 ** [[Lamadaya]]
 * [[:Category:Buuraha Somaliland|Buuraha]]
 ** [[Buuraha Golis]]
@@ -94,9 +94,9 @@
 ** [[Golaha Wakiilada Somaliland|Golaha Wakiilada]]
 * [[Liiska Xisbiyada Siyaasadda Somaliland|Xisbiyada Siyaasadda]]
 * [[Jagada Madaxwaynaha Somaliland|Madaxwaynaha]]
-** [[Jagada Madaxwaynaha Somaliland|Liiska]]
+** [[Madaxweynayaashii Somaliland|Liiska]]
 * [[Madaxweyne ku xigeenka Somaliland|Madaxweyne ku xigeenka]]
-** [[Madaxweyne ku xigeenka Somaliland|Liiska]]
+** [[Liiska Madaxweyne ku xigeenka Somaliland|Liiska]]
 * [[Template:Wasiirada Somaliland|Wasiirada]]
 * [[Template:Duqa magaalooyinka Somaliland|Duqa magaalooyinka]]
 * [[Sharciga fiisaha Somaliland|Sharciga Fiisaha]]
