/* Madaxweynaha Jamhuuriyadda Somaliland (1991-ilaa iyo haatan) */

--- a/Jagada_Madaxwaynaha_Somaliland.mw
+++ b/Jagada_Madaxwaynaha_Somaliland.mw
@@ -20,7 +20,7 @@
 '''Madaxweyneyaashii soomaray dalka [[Somaliland]].'''
 
 '''Madaxdii somaliland''' Oo ay kujiraan madaxdii dhimatay ilaahay ha u naxariistee
-== Madaxweynaha Jamhuuriyadda Somaliland (1991-ilaa iyo haatan) ==
+==Liiska Madaxweynayaasha==
 {| class="wikitable" style="font-size:85%;"
 |- align=left
 ! width="18%"|Xilka qabtay
