--- a/Wikipedia:Sandbox.mw
+++ b/Wikipedia:Sandbox.mw
@@ -1,1 +1,1 @@
-wabxo wa deegaan kamid Ah gobalka hiiraan.
+Naruura mohiadin Gure she was born Somalia in Galkio "muduG" 1 April 2004 she Mather "Shugri Ahmed Hussein" and she father "Mohiadin Abdi Gure" naruura family all muslims
