--- a/Salagle.mw
+++ b/Salagle.mw
@@ -11,15 +11,7 @@ Degmada waxaa kala bara [[Wabiga Jubba]], waxaa hoostga tuulooyinka kala ah,
 *[[Buula xaar]]
 *[[Dhakaaje]]
 
-Waxaa kamid ah Beelaha degan beesha [[Faqiwalaal]] iyo rer [[Ow Heeraar]] ee ah [[Qubeys (Beel)|Qubeys]],  [[Cowlyahan ee ah [[Ogaadeen]] iyo beesha [[Talxe]] ee ah [[Mareexaan]].
-
-
-
-
-
-
-
-
+Waxaa kamid ah Beelaha degan beesha [[Faqiwalaal]],[[Garjante]] iyo rer [[Ow Heeraar]] ee ah [[Qubeys (Beel)|Qubeys]],  [[Cowlyahan ee ah [[Ogaadeen]] iyo beesha [[Talxe]] ee ah [[Mareexaan]].
 
 ==tixraac==
 {{reflist}}
