--- a/Suzy.mw
+++ b/Suzy.mw
@@ -1,6 +1,6 @@
 {{wargelin|Qoraalka bogan waa mid uqoran si qaab daran ama ka samaysan luuqad qalaad. Fadlan naga caawi turjumaada.}}
 Bae Su-ji (wuxuu dhashey 10-kii Oktoobar 1994), oo loo yaqaan Suzy, waa jilaa iyo fanaan [[Koonfur Kuuriya]]. Waxay xubin ka ahayd kooxda gabdhaha Miss A ee sameeyey [[JYP Entertainment]] <ref>{{cite web|language=Korean|url=http://www.hankyung.com/news/app/newsview.php?aid=2012040316747|title='미쓰에이' 수지, "슈퍼스타K 오디션장에서 캐스팅 됐다"|trans-title=miss A's Suzy: "I was launched by Superstar K"|date=April 3, 2012|work=Hankyung}}</ref>.{{Infobox person|name=Suzy|image=Suzy Bae at 'Faces of Love' showcase on January 29, 2018 (3).jpg|image_size=|caption=Suzy bishii Janaayo 29, 2018|native_name=배수지|native_name_lang=ko|birth_name=Bae Su-ji|othername=Bae Suzy|birth_date={{birth date and age|mf=yes|1994|10|10}}|birth_place=[[Buk District, Gwangju]], South Korea|education=[[School of Performing Arts Seoul]]|agent=[[Management SOOP]]|occupation=*jilaa 
-*fanaan}}Suzy markii dambe waxay sameysay muuqaalkeedii ugu horreeyay iyadoo jilaa ah oo leh taxane telefishan ah ''[[Dream High]]'' (2011), waxayna usocotay inay kasoo muuqato taxane ah sida ''[[Gu Family Book]]'' (2013), ''[[Uncontrollably Fond]]'' (2016), ''[[While You Were Sleeping]]'' (2017) iyo ''[[Vagabond]]''  (2019).  Waxay sameysay filimkeedii ugu horreeyay ee ''[[Architecture 101]]'' (2012).
+*fanaan|known for=[[Miss A]]}}Suzy markii dambe waxay sameysay muuqaalkeedii ugu horreeyay iyadoo jilaa ah oo leh taxane telefishan ah ''[[Dream High]]'' (2011), waxayna usocotay inay kasoo muuqato taxane ah sida ''[[Gu Family Book]]'' (2013), ''[[Uncontrollably Fond]]'' (2016), ''[[While You Were Sleeping]]'' (2017) iyo ''[[Vagabond]]''  (2019).  Waxay sameysay filimkeedii ugu horreeyay ee ''[[Architecture 101]]'' (2012).
 
 == Nolosha hore ==
 Suzy wuxuu ku dhashay Oktoobar 10, 1994,<ref name="Russell2014">{{cite book|author=Russell, Mark|title=K-Pop Now!: The Korean Music Revolution|page=96|url=https://books.google.com/books?id=etDZAwAAQBAJ|date=April 29, 2014|work=Tuttle Publishing|isbn=978-1-4629-1411-1}}</ref> Waxay leedahay walaashiis ka weyn, Bae Su-bin, iyo walaalkeed ka yar, Bae Sang-moon. <ref name="family">{{cite web|url=http://shindonga.donga.com/docs/magazine/shin/2012/11/21/201211210500021/201211210500021_1.html|script-title=ko:뭇 남성 사로잡은 첫사랑 아이콘 미쓰에이 수지|date=December 2012|work=The Donga Ilbo|language=Korean}}</ref>  Waxay dhigatay Dugsiga School of Performing Arts Seoul waxayna qalin jabisay 2013.<ref name="family2" />  Kahor doodinta, waxay ahayd nooc dukaameedka internetka ah<ref>{{cite web|url=http://news.donga.com/3/all/20101217/33347401/6|script-title=ko:미쓰에이 수지 데뷔 전 쇼핑몰 모델 활동…사진봤더니|trans-title=miss A's Suzy shopping mall model past photos revealed|date=December 17, 2010|work=The Donga Ilbo|language=Korean}}</ref><ref>{{cite web|url=http://english.chosun.com/site/data/html_dir/2013/02/08/2013020801090.html|title=Teen Starlets Finish High School|date=February 8, 2013|website=The Chosun Ilbo}}</ref>.
