*Empty MediaWiki Message*

--- a/Shakira.mw
+++ b/Shakira.mw
@@ -1,6 +1,6 @@
 Shakira Isabel Mebarak Ripoll (wuxuu dhashay [[Febraayo|2 Febraayo]] [[1977]]) waa fannand-[[Kolombiya]], soo saare ah riwaayad, qoob-ka-ciyaaraya, jilaa iyo tabaruc. Waxay ku dhalatay kuna kortay Barranquilla, waxay sameysay duubisteedii ugu horreeyay ee ka dhacey ''Sony Music Columbia'' markay ahayd 13 sano. Ka dib guuldaradii ganacsi ee labadeeda album ee ugu horreeyay, ''Magia'' (1991) iyo ''Peligro'' (1993), waxay caan ku noqotay ku hadalka Isbaanishka. wadamada leh albumyadeeda xiga, ''Pies Descalzos'' (1995) iyo ''Dónde Están los Ladrones?''  (1998).  Shakira waxay gashay suuqa luuqadda Ingiriisiga iyadoo leh albumkeedii shanaad, ''Laundry Service'' (2001).  Waxay iibisay in ka badan 13 milyan oo nuqul, waxay daaha ka qaadday hal-ku-dhigga caalamiga ah ee hal-ku-dhega ah "Whenever, Wherever" iyo "Underneath Your Clothes", waxayna ku faafisay sumcadeeda inay tahay fanaaniin caan ah
 
-{{Infobox person|name=Shakira|tiêu đề=|học vấn=|tổ chức=|nổi tiếng=|notable works=|quê quán=|[[chiều cao]]=157 cm|cân nặng=|nhiệm kỳ=|quốc tịch={{COL}}|tiền nhiệm=|kế nhiệm=|đảng phái=|người hôn phối=|cha=|mẹ=|giải thưởng=|chữ ký=|học vị=|dân tộc=|image=File:Shakira - Glastonbury Festival 2010.jpg|years_active=1988–xaadir|image_size=240px|caption=Shakira sanadkii 2010|birth_name=Shakira Isabel Mebarak Ripoll|birth_date={{birth date and age|df=yes|1977|2|2}}|birth_place=[[Kolombiya]]|residence=|occupation=[[fanaan]]|partner=|tên khác=|children=2|website={{URL|shakira.com}}|module={{Infobox musical artist|embed=yes
+{{Infobox person|name=Shakira|tiêu đề=|học vấn=|tổ chức=|nổi tiếng=|notable works=|quê quán=|[[chiều cao]]=157 cm|cân nặng=|nhiệm kỳ=|quốc tịch={{COL}}|tiền nhiệm=|kế nhiệm=|đảng phái=|người hôn phối=|cha=|mẹ=|giải thưởng=|chữ ký=|học vị=|dân tộc=|image=Shakira 2014.jpg|years_active=1988–xaadir|image_size=240px|caption=Shakira sanadkii 2014|birth_name=Shakira Isabel Mebarak Ripoll|birth_date={{birth date and age|df=yes|1977|2|2}}|birth_place=[[Kolombiya]]|residence=|occupation=[[fanaan]]|partner=|tên khác=|children=2|website={{URL|shakira.com}}|module={{Infobox musical artist|embed=yes
 | background = solo_singer
 | genre = {{hlist|[[Pop]]|Latin pop
 | instrument = {{hlist|cod|web|url=https://www.rollingstone.com/artists/shakira/articles/story/5935651/shakira_trots_out_mongoose |title=Archived copy |accessdate=ngày 6 tháng 1 năm 2007 |deadurl=unfit |archiveurl=https://web.archive.org/web/20090201184551/http://www.rollingstone.com/artists/shakira/articles/story/5935651/shakira_trots_out_mongoose |archivedate=ngày 1 tháng 2 năm 2009 }}. ''[[Rolling Stone]]''. Ngày 11 tháng 11 năm 2002. Retrieved ngày 6 tháng 1 năm 2007.</ref>}}
