--- a/Midhisho.mw
+++ b/Midhisho.mw
@@ -1,3 +1,1 @@
-Midhisho waa tuulo oo ku yaal Sanaag waxa dega beesha Cabdale Xaamud Oo kamid ah beelweynta Muuse ismaaciil eehabaryoonis Bari 
-
-[[category:Soomaaliya]]
+#REDIRECT [[Midhishe]]
