Bog loo bedeley [[Midhishe]]

--- a/Midisho.mw
+++ b/Midisho.mw
@@ -1,3 +1,1 @@
-Medishe waa tuulo oo ku yaal Sanaag ama [[Maakhir]] oo waxaa ku nool [[Rikhaaye]] ([[Ugaadhyahan]]), iyo [[Bahina Farah]] ([[Ugaadhyahan]]).
-
-[[category:Soomaaliya]]
+#REDIRECT [[Midhishe]]
