Bog loo bedeley [[Dareema caddo]]

--- a/Dareema_cadda.mw
+++ b/Dareema_cadda.mw
@@ -1,4 +1,1 @@
-'''Dareema Cadda''' waa xaafad ku yaalo Buuhoodle ee ahayd caasimadda kowaad ee Darwiish sannadka 1896. Taariikh ahaan, waa deegaan oo Caraale Mahad ah. Laakiin Caraale Mahad waxay u guureen Dhilaalo.
-
-
-[[category:Soomaaliya]]
+#REDIRECT [[Dareema caddo]]
