Bog loo bedeley [[Bah Nugaal]]

--- a/Qayaad.mw
+++ b/Qayaad.mw
@@ -1,4 +1,1 @@
-[[File:Qayaad, bah nugaal.jpg|thumb|Qayaad, ugu taageersana Sayyidka]]
-Qayaad waa qabiil [[Bah Nugaal]] oo Dhulbahante ah.
-
-[[Category:Qabiilada Soomaalida]]
+#REDIRECT [[Bah Nugaal]]
