*Empty MediaWiki Message*

--- a/Cabdi_Bile.mw
+++ b/Cabdi_Bile.mw
@@ -7,4 +7,4 @@ Abdi Bile waa [[ciyaaryahan]]ka ugu caansan ee Soomaalidda.
 {{gumud}}
 
 [[Category:Orodyahanda soomaalida]]
-[[Category:Ciyaaryahan]]
+[[Category:Ciyaaryahan]] waa somali cssn ah
