*Empty MediaWiki Message*

--- a/Buuhoodle.mw
+++ b/Buuhoodle.mw
@@ -5,11 +5,11 @@
 |nickname               = 
 |settlement_type        =Magaalo
 |motto                  =
-|image_skyline          = 
+|image_skyline          = Buuhoodle were the main darwiishes.png
 |imagesize              = Buuhoodle waa saldhiga daraawiish
 |image_caption          = 
 |flag_size              =
-|image_seal             = 
+|image_seal             = Buuhoodle = truest darwiishes.png
 |seal_size              = 300px
 |image_map              = 
 |mapsize                = 
