*Empty MediaWiki Message*

--- a/Begedi.mw
+++ b/Begedi.mw
@@ -62,6 +62,11 @@ Cali cabdulle mayoow (shuraylle) ahna u tartame xalibaan sanadka marka uu ahaa19
 20- Shekh Abdi Bariire oo kamid noqday gudoomiye yaashi uga horeeyay ee gobolada dalka somaliya soona noqday gudoomiyihii ugu horeeyay Bankiga dhexe ee Soomaaliya.
 
 
+21- Awmaye Abuukar Dunaato .
+Awmaye wuxuu kamid ahaa aqoonyahaanadi ugu horeeyay ee barta cilmiga beeraha jaamacadaha wadankana kadhigi jiray maadadaas, Sido kale wuxuu madax u ahaa hay’adii la oran jiray Ente Banaana.
+
+
+
 
 
 {{beelaha soomaalida}}
