*Empty MediaWiki Message*

--- a/Begedi.mw
+++ b/Begedi.mw
@@ -16,6 +16,7 @@ Waa dad xoolo dhaqato  iyo beeraley ah . Waxay degaan [[Afooye]] , [[Awdheegle]]
 Sido kale waxay degaan koonfurta [[Yemen]] sida [[Xadramoot]]. 
 MAS’uuliyiinnta:
 
+Tirokoob lagu sameeyay 1960ki waxa lagu sheegay beesha Begedi /Bagadi in ay yihiin 30.000 oo ruux ah oo kuwaas intoodi badan deganyihiin gobolka shabeaha hoose iyo Banaadir.
 
 1- Suldaan Buube 
 
