--- a/Cabdi_Bile.mw
+++ b/Cabdi_Bile.mw
@@ -1,7 +1,38 @@
-[[File:Bile Abdi (482x321).jpg|thumb|[[Abdi Bile]], ee [[ciyaaryahan]]ka ugu caansan]]
-Abdi Bile waa [[ciyaaryahan]]ka ugu caansan ee Soomaalidda.
-
-
+{{Use dmy dates|date=April 2020}}
+{{Infobox athlete
+|name = Abdi Bile
+| image = Bile Abdi (482x321).jpg
+|imagesize = 200px
+|caption = Image of Abdi Bile
+| sport = [[Track and field#Running|orodka wadada]]
+| event = [[800 metres|800m]], [[1500 metres|1500m]], [[Mile run|mile]], [[3000 metres|3000m]]
+| nationality = [[Somalis|Somali]]
+|alias =
+|club =
+|birth_date = {{Birth date and age|1962|12|28|df=yes}}
+|birth_place = [[Laascaanood]], [[Sool, Soomaaliya|Sool]]
+|collegeteam = [[George Mason Patriots|George Mason]]
+|height ={{convert|1.85|m|ftin}}
+|weight ={{convert|75|kg|lb}}
+|turnedpro =
+|retired =
+|pb = '''[[800 metres|800m]]''': 1:43.60<ref name="IAAF">{{cite web|url=http://www.iaaf.org/athletes/somalia/abdi-bile-261|author=IAAF|title=Athlete profile for Abdi Bile}}</ref> <br> '''[[1500 metres|1500m]]''': 3:30.55<ref name="IAAF"/> <br> '''[[Mile run|Mile]]''': 3:49.40<ref name="IAAF"/>
+|olympics =
+|worlds =
+|highestranking =
+|coaching = 
+|updated =
+|medaltemplates =
+{{MedalSport | [[Ciyaaraha (isboorti)|cayaaraha]] nimanka}}
+{{MedalCountry | {{SOM}} }}
+{{MedalCompetition|[[Horyaalada adduunka ee Ciyaaraha]]}}
+{{MedalGold| [[Horyaalada adduunka ee Ciyaaraha 1987|1987 Rome]] | [[Horyaalada adduunka ee Ciyaaraha 1987 – 1500 mitir ee nimanka|1500 m]]}}
+{{MedalBronze| [[Horyaalada adduunka ee Ciyaaraha 1993|1993 Stuttgart]] | [[Horyaalada adduunka ee Ciyaaraha 1993 – 1500 mitir ee nimanka|1500 m]]}}
+{{Medal|Competition|[[Koobabka Qaaradaha IAAF|Koobabka Qaaradaha]]}}
+{{MedalGold|[[Koobka aduunka 1989 IAAF|Barcelona 1989]]|1500 m}}
+{{MedalCompetition|[[Horyaalada Afrika ee Ciyaaraha|Horyaallada Afrika]]}}
+{{MedalSilver |[[Horyaalada Afrika ee Ciyaaraha 1985|1985 Qaahiro]]|1500 m}}
+}}
 '''Cabdi Bile Cabdi''' (''عبدالله بله عبدالله''; Abdi Bile; * 28.12.[[1962]],wuxuu ku dhashay magaalada [[Laascaanood]] ee gobalka sool. cabdi waa oradyahan caan ah oo umada somaliyeed aad u jeceshahay wuxuuna somali gaarsiyay guul ayna waliged gaarin. wuxuu noqday Somaligii ugu horeeyay ee ku guulaysta oradka aduunka ee 1500 mitir oo ka dhacay magaalada [[Roma|Rooma]] sanadkii [[1987]] kuna guulaystay bilada dahabka. cabdi wuxuu kaloo kaalinta sadexaad ka galay oradka aduunka sanadkii [[1993]] dii oo ku guulaysta bilada naxaasta. wuxuu kakloo cabdi ka galay ciyaaraha fudud ee afrika kaalinta sedexaad wuxuuna ku guulaystay bilada silferka. sanadka [[1995]] cabdi waxaa la soo daristay guul daradii ugu wayanayd wuxuuna ciyaaraha aduunka ka galay kaalinta lixaad kaas ayaana ahaa ciyaarihii olombikada ee ugu dambeeyay ee uu ka qayb galo.Halyayga Cabdi Bile waxaa lagu sharfay inuu calanka usido orodyahana Somalia umatalaya ciyaaraha olombikada ee [[london]] ka dhacay sanadkii [[2012]]. Bile oo ah halyay somalidu si fiican u jeceshahay waxaa uu kunool yahay wadanka maraykanka. Cabdi Bile yaraan tiisii wuxuu ku ordi jirey buurta sayidka oo kutaala magaalada laascaanood.
 
 {{gumud}}
