--- a/Caasimadaha_Daraawiish.mw
+++ b/Caasimadaha_Daraawiish.mw
@@ -3,15 +3,18 @@ Boggan wuxuu kuu tusaya caasimadaha Qaranka Daraawiish sanadka 1896 ilaa 1920.
 
 ==Liiska==
 *1896 - 1898 [[Dareemo Caddo]], [[Buuhoodle]]
-*1899 - 1900 [[Qoob Fardood]], Buuhoodle
-*1901 (qaybtii hore) Baran, Sool (qeybti hore), Weylahed (Sool)
-*1901 (qaybtii dambe) - Beretabli, (Sool) Fardhiddin (Sool), Yahelli (Sool)
-*1902 - Laasader (Sool), Baran (Sool)
-*1903 - Halin (Sool)
-*1904 - Halin (Sanaag), Kheman (Sanaag), Kalgaraf (Sanaag)
-*1905 - 1907 Eyl, Puntland
-*1908 - 1909 Halin, Sool
-*1919, Jiidaali Sanaag
-*1910 - 1920, Taleh, Sool
+*1899 - 1900 [[Sacmadeeqa]], Qoob-fardood - Buuhoodle
+*1901 (qaybtii hore) Samala (guumeys), Baran (Sool) Afbakayle (Sool), Weylahed (Sool)
+*1901 (qaybtii dhexe) Ano Harigli/Caanoxadighle (kalabaydh), Beretable (Boocame)
+*1901 (qaybtii dambe) Fardhiddin + Yahelli (Sool), Docmo/Damot (Bookh)
+*1902 - Laasader/Laasadhaar (Shulux), Baran (Sool)
+*1903 - Halin (Sool), Gumburka Cagaare (degmo: Bookh)
+*1904 (hore) Halin (Sanaag), Xudun + Jidali
+*1904 (dambe) Kheman (Sanaag), Kalgaraf (Sanaag)
+*1905 - 1907 Eyl & Illig (Puntland)
+*1908 - 1909 Halin (Sool)
+*1909 - 1910 Qawlo/Gaulo + Goriasan (degmo: Taleex)
+*1919, Jiidaali (Sanaag)
+*1910 - 1920, Taleh (Sool)
 
 [[category:Dhaqan]]
