*Empty MediaWiki Message*

--- a/Begedi.mw
+++ b/Begedi.mw
@@ -18,6 +18,11 @@ MAS’uuliyiinnta:
 
 Tirokoob lagu sameeyay 1960ki waxa lagu sheegay beesha Begedi /Bagadi in ay yihiin 30.000 oo ruux ah oo kuwaas intoodi badan degan gobolka shabeaha hoose iyo Banaadir.
 
+Beeshu waxay taariiq dheer kuleeyihiin ladagalamki gumaystuhu talyaaniga iyo ingariiska e dalka haystay .
+Waa beel lagu yaqaano nabada , diris wanaaga iyo xiriir wanaagsan kala dhaxeeyo beelaha kale ee Soomaliyeed.
+Beeshu boqolaal sano kahor waxay ganacsi isugu socon jireen Soomaliya iyo wadamada carabta oo dhan gaar ahaa Yeman .
+
+
 1- Suldaan Buube 
 
 2- Dr Khaalid wasiirki isboortiga dawladi Xasan Shekh 
