*Empty MediaWiki Message*

--- a/Begedi.mw
+++ b/Begedi.mw
@@ -14,7 +14,7 @@
 Waa dad xoolo dhaqato  iyo beeraley ah . Waxay degaan [[Afooye]] , [[Awdheegle]], [[Mubarak]] , [[bariire]] , [[Cumur beere (tuulo)|Cumar beere]] , [[Daaru Salaam (tuulo)|Daaru salaam]], [[Buulo mareer]] , [[Qoryooleey]] [[Waabari]] iyo [[Marko]]. 
 
 Sido kale waxay degaan koonfurta [[Yemen]] sida [[Xadramoot]]. 
-MAS’uuliyiinnta:
+
 
 Tirokoob lagu sameeyay 1960ki waxa lagu sheegay beesha Begedi /Bagadi in ay yihiin 30.000 oo ruux ah oo kuwaas intoodi badan degan gobolka shabeaha hoose iyo Banaadir.
 
@@ -22,6 +22,8 @@ Beeshu waxay taariiq dheer kuleeyihiin ladagalamki gumaystuhu talyaaniga iyo ing
 Waa beel lagu yaqaano nabada , diris wanaaga iyo xiriir wanaagsan kala dhaxeeyo beelaha kale ee Soomaliyeed.
 Beeshu boqolaal sano kahor waxay ganacsi isugu socon jireen Soomaliya iyo wadamada carabta oo dhan gaar ahaa Yeman .
 
+
+MADAXDA SARE EE BEESHU:
 
 1- Suldaan Buube 
 
