--- a/Begedi.mw
+++ b/Begedi.mw
@@ -1,4 +1,4 @@
-'''Begedi''' / Bagadi Sido kale loogu waco (mucajab) wa beel hoosaad kamid ah beelweynta [[Digil iyo Mirifle]], Begedi wuxuu uqaybsamaa :
+'''Begedi''' / Bagadi Sido kale loogu waco (mucajab) wa beel hoosaad kamid ah beelweynta [[Digil iyo Mirifle]] gaar ahaan Digil Begedi wuxuu uqaybsamaa :
 
 1- [[Abaasaad]] ( Dheegle iyo Carfaale )
 
