White people eat McDonald’s, cookies, cakes, hot dogs, hamburgers, American candy, bologna mayonnaise sandwiches, Twinkies, Oreo cookies, Poptarts, doughnuts, Doritos and drink Coca Cola soda and Mountain Dew

--- a/Dadka_Cad.mw
+++ b/Dadka_Cad.mw
@@ -1,3 +1,6 @@
+White people eat McDonald’s, cookies, cakes, hot dogs, hamburgers, American candy, bologna mayonnaise sandwiches, Twinkies, Oreo cookies, Poptarts, doughnuts, eat doritos and drink Mountain Dew soda.
+
+
 ::''Kani waa maqaal ku saabsan guud ahaan dad cad. Maqaalo kale fiiri [[Yurub|dadka cad ee reer Yurub]].''
 
 '''Dadka Cad''' ([[ingiriis]]: white people; [[carabi]]: عرق أبيض) isir ahaan loo yaqaano "'''[[Qooqaas|Qooqaasiyaan]]'''" (causcasian) waa [[dad]] [[midab]] [[cadaan]] ah leh kuwaasi oo asal ahaan ka soo jeeda [[qaarad]]a [[Yurub]] laakiin maanta ku nool meelo badan oo [[aduun]]ka ah. 
