Replacing Einsatzgruppe_shooting.jpg with [[File:German_officer_executes_Jewish_women_who_survived_a_mass_shooting_outside_the_Mizocz_ghetto,_14_October_1942.jpg]] (by [[:c:User:CommonsDelinker|CommonsDelinker]] because: [[:c:COM:FR|File renamed]]: Name i

--- a/Holocaust.mw
+++ b/Holocaust.mw
@@ -1,5 +1,3 @@
-
-
 Holocaust
 
 
@@ -13,7 +11,7 @@ Jarmalku wuxuu dhaqan geliyey cadaadiska marxaladaha. Adolf Hitler 1933-dii wuxu
 
 
 
-[[File:Einsatzgruppe shooting.jpg|thumb|left|German police shooting women and children from the [[Mizocz Ghetto]], 14 October 1942]]
+[[File:German officer executes Jewish women who survived a mass shooting outside the Mizocz ghetto, 14 October 1942.jpg|thumb|left|German police shooting women and children from the [[Mizocz Ghetto]], 14 October 1942]]
 
 
 Sii-wadida dilka dadweynuhu wuxuu u keenay waddanka waxa uu yahay Michael Berenbaum oo loo yaqaan 'state genocidal'. Xafiisyada loo yaqaan 'Bureaucrats' ayaa loo aqoonsaday qofkii Yuhuudi ahaa, hantidii la wareegay, iyo tareeno qorshaysan oo Yuhuudda lagu soo tarxiilay. Shirkaduhu waxay xiri jireen Yuhuudda dabadeedna waxay u shaqeeyeen sida addoon ahaan. Jaamacadaha ayaa iska fogeeyay macalimiinta Yuhuudda iyo ardayda. Shirkadaha dawooyinka Jarmalka ayaa tijaabiyay mukhadaraadka maxaabiista xeryaha; Shirkadaha kale waxay dhisteen crematoria. [30] Iyadoo maxaabiistu ay galeen xeryaha dhimashada, waxaa lagu amray in ay is dhiibaan dhammaan hantida shakhsiyadeed, oo la duubay oo la soo xiray ka hor inta aan loo dirin Jarmalka si dib loogu isticmaalo ama dib loo isticmaalo. Iyadoo loo marayo xisaab qarin ah, Bankiga Qaranka Jarmalka wuxuu gacan ka geystay gacan ku dhiiglayaasha laga xaday dhibbaneyaasha. [32]
