--- a/Dilla.mw
+++ b/Dilla.mw
@@ -61,7 +61,7 @@
 }}
 
 
-'''Dilla''' ({{lang-ar|ديلا}}) waa [[magaalo]] iyo degmo ka mida magaalooyinka [[somaliland]],waxa wada dagan beelaha Reer nuur, jibraacin iyo Reer Maxamed. waxa ay kutaal Juquraafi ahaan woqooyi galbeed somaland, magaaladan waxa ay caan ku tahay xaga waxsoo saarka Waana degmo kamida shanta degmo ee uu Lahaa [[Gobolka Awdal]] 1991kii ,
+'''Dilla''' ({{lang-ar|ديلا}}) waa [[magaalo]] iyo degmo ka mida magaalooyinka [[somaliland]], Dilla waxaa dagan reer maxamuud ee beesha Reer Nuur. Waxa ay kutaal Juquraafi ahaan woqooyi galbeed somaland, magaaladan waxa ay caan ku tahay xaga waxsoo saarka Waana degmo kamida shanta degmo ee uu Lahaa [[Gobolka Awdal]] 1991kii ,
                                                                     
 Dilla waa magaaladii labaad ee lagu weeraro diyarad gayga somaliyeed .Dilla waa goob ku wanaagsan dalxiisaka soona jiidata indha dadka .dilla waxa ay ahan jirtay magaalo aad uwayn intii ka horaysay dagaladii sokeeye waxana dagi jiray dad ilbax oo leh   kala dambayn iyo xadarad leh.hadaba dilla waxay ka mid tahay magaloyinka uuka muuqdo diiftii iyo dagaladii sokeeye .magalada dilla waxa lo burburshay si a an lo burburin magaloyinka qaar sababo LA xidhidhay dadka daga oo ahaa dadka ugu ilbaxsan uguna kartida badan .hadaba akhriste dagmada dilla waxay ledahay tariikh aan lasoo kobi Karin 
 
