*Empty MediaWiki Message*

--- a/Aanaaneh.mw
+++ b/Aanaaneh.mw
@@ -1,17 +1,5 @@
 [[File:Northeast somalia geography.png|thumb|Dhulka Aanaaneh]]
-'''Aanaaneh''' waa dhul gunburaha leh oo bartamaha [[Sanaag]] ku yaal, ee la wadaagta degmada [[Fuqufuliye]].
-
-
-
-
-
-
-
-
-
-
-
-
+'''Aanaaneh''' waa dhul gunburaha leh oo bartamaha [[Sanaag]] ku yaal, ee la wadaagta degmada [[Fuqufuliye]]. Anaaneh waa dhul la
 
 
 
