--- a/Aanaaneh.mw
+++ b/Aanaaneh.mw
@@ -1,9 +1,5 @@
 [[File:Northeast somalia geography.png|thumb|Dhulka Aanaaneh]]
-'''Aanaaneh''' waa dhul gunburaha leh oo bartamaha [[Sanaag]] ku yaal, ee la wadaagta degmada [[Fuqufuliye]]. Anaaneh waxaa hoos yimaada Karaman, iyo Dambaba, iyo Burweiso, iyo Karindag, iyo Dabaro, iyo Hagradin, iyo Bur-anod, 
-
-
-
-
+'''Aanaaneh''' waa dhul gunburaha leh oo bartamaha [[Sanaag]] ku yaal, ee la wadaagta degmada [[Fuqufuliye]]. Anaaneh waxaa hoos yimaada Karaman, iyo Dambaba, iyo Burweiso, iyo Karindag, iyo Dabaro, iyo Hagradin, iyo Bur-anod, iyo Sarate.
 
 {{gumud}}
 
