--- a/Puntland.mw
+++ b/Puntland.mw
@@ -7,7 +7,7 @@
 |Official Logo = Puntland State of Somalia Coat of Puntland State of Somalia Coat of Arms.png
 |Flag = Flag of Puntland.svg
 |CoatOfArms = Puntland State of Somalia Coat of Arms.png
-|Map = Maamulgoboleedka Soomaaliya.png
+|Map = Regioni federali Somali.png
 |Motto = {{nowrap|"iskaa" <small>(wax )<br/>"u " (qabso)</small>}}
 |OfficialLang = Soomaali <small>(''Xoogaa Carabi ah'')</small>
 |Demonym = Dawlad goboleedka Puntland<br/>Maamul Goboleedka Soomaaliyeed ee Puntlnd<br/><small>(Puntaland)</small>
