--- a/Galmudug.mw
+++ b/Galmudug.mw
@@ -8,7 +8,7 @@
 |Official Logo = Galmudug State of Somalia Coat of Galmudug State of Somalia Coat of Arms.png
 |Flag = Flag of Galmudug.svg
 |CoatOfArms =
-|Map = Maamulgoboleedka Soomaaliya.png
+|Map = Regioni federali Somali.png
 |OfficialLang = Soomaali <small>(''Xoogaa Carabi ah'')</small>
 |Demonym = Dawlad goboleedka Galmudug<br/>Maamul goboleedka Soomaaliyeed ee Galmudug<br/><small>(Galmudug)</small>
 |Capital = [[Dhuusamareeb]]
