*Empty MediaWiki Message*

--- a/Koonfur_Galbeed.mw
+++ b/Koonfur_Galbeed.mw
@@ -3,8 +3,9 @@
 | common_name                = Koonfur Galbeed Soomaaliya
 | native_name                = ([[Af-maay]]<nowiki> | Koonfur Orsi</nowiki>)<br>Koofur Orsi
 | image_flag                = Flag of Southwestern Somalia.svg
-| image_map                = Map of the South West State within Somalia.png
+| image_map                = Regioni federali Somali.png
 | map_caption                = Barta ee ku taalo Dowlad goboleedka Koonfur Galbeed
+| image_map2                 =Map of the South West State within Somalia.png
 | capital                = [[Baraawe]]
 | official_languages         = <nowiki></nowiki>
 *<nowiki>Af-Soomaali</nowiki>, Af Maay<nowiki></nowiki>
