--- a/Jubaland.mw
+++ b/Jubaland.mw
@@ -6,9 +6,10 @@
 |motto                  = 
 |settlement_type        ='''[[Mamul Goboleedl]]''' 
 |image_shield           = 
-|image_map              =Jubaland maabkeeda ee Somalia.jpg
+|image_map              =Regioni federali Somali.png
 |mapsize                = 
 |map_caption            =Jubaland
+|image_map2             =Jubaland maabkeeda ee Somalia.jpg
 |subdivision_type       =Wadanka
 |subdivision_name       ={{flag|Somalia}}
 |subdivision_type1      =
