*Empty MediaWiki Message*

--- a/Cayn.mw
+++ b/Cayn.mw
@@ -14,6 +14,7 @@
 |image_map              =Somalia regions map Sool.svg
 |mapsize                =250px
 |map_caption            =Waxay Soomaalia kaga taal ama.
+|image_map2             =Regioni federali Somali.png
 |coordinates_display    =inline,title
 |coordinates_region     =SO
 |subdivision_type       =Dalka
