*Empty MediaWiki Message*

--- a/Jubaland.mw
+++ b/Jubaland.mw
@@ -1,4 +1,4 @@
-{{Infobox settlement
+{{Infobox country
 |name                   =Jubaland
 |native_name            =Dhulka Jubba
 |other_name             =ولاية أرض جوبا الصومال 
