*Empty MediaWiki Message*

--- a/Cayn.mw
+++ b/Cayn.mw
@@ -1,4 +1,4 @@
-{{Infobox settlement
+{{Infobox country
 |name                   =Cayn
 |native_name            =Dhul Darawiish ee Cayn
 |other_name             =Dhul Darawiish ee Cayn
