Bog loo bedeley [[Mooracase]]

--- a/Axmed_Harti.mw
+++ b/Axmed_Harti.mw
@@ -1,1 +1,1 @@
-<nowiki>Axmed Harti</nowiki> Waa Beelaha loo yaqaano [[Mooracase]] ee Ka tirsan Beelweynta Daarood. Beelaha Axmed Harti waxay ka kooban yihiin Afar beelood oo kala ah Qazim Axmed (Gabtaanle),  Maxamuud Axmed (Dishiishe),  Nux Axmed (Maganlabe), iyo Tiinle Axmed (Tiinle). Waxay deegaan ku yihiin Soomaaliya iyo Dalka Cumaan. <ref>http://allsbc.com/guddiga-qaban-qaabada-shirweynaha-beesha-axmed-harti-ee-uk-oo-london-kulan-ku-yeeshay/</ref>
+#REDIRECT [[Mooracase]] <nowiki>Axmed Harti</nowiki> Waa Beelaha loo yaqaano [[Mooracase]] ee Ka tirsan Beelweynta Daarood. Beelaha Axmed Harti waxay ka kooban yihiin Afar beelood oo kala ah Qazim Axmed (Gabtaanle),  Maxamuud Axmed (Dishiishe),  Nux Axmed (Maganlabe), iyo Tiinle Axmed (Tiinle). Waxay deegaan ku yihiin Soomaaliya iyo Dalka Cumaan. <ref>http://allsbc.com/guddiga-qaban-qaabada-shirweynaha-beesha-axmed-harti-ee-uk-oo-london-kulan-ku-yeeshay/</ref>
