*Empty MediaWiki Message*

--- a/Soomaaliland.mw
+++ b/Soomaaliland.mw
@@ -16,7 +16,7 @@
 |symbol_type = National emblem
 |national_motto = <br />{{native phrase|ar|{{lower|0.1em|[[Shahaadah|<big>لا إله إلا الله محمد رسول الله</big>]]}}|italics=off|nolink=on}}<br />''Lā ilāhā illā-llāhu; muhammadun rasūlu-llāhi''<br />{{small|"[[Shahadah|Ilaah ma jiro Alle mooye; Muxammed waa rasuulka Alle]]"}}
 |national_anthem = <br />{{lang|so|''[[Samo ku waar]]''}}<br />{{small|''Long life with peace''}}<br /><center></center> [[File:Samo_ku_waar_(Somaliland_anthem).ogg|center]]
-|image_map = Somaliland orthographic.png
+|image_map = Somaliland (orthographic projection).svg
 |capital = [[Hargeysa]]
 |largest_city = [[Hargeysa]]
 |Portka = [[Berbera]]
