Wuxuu dib u noqay badalkii oo sameeyay  [[Special:Contributions/197.220.84.90|197.220.84.90]] ([[User talk:197.220.84.90|talk]]) kuna celiyay badalkii ka  danbeeyay oo sameeyay  [[User:Salid232|Salid232]]

--- a/Singabuur.mw
+++ b/Singabuur.mw
@@ -88,10 +88,9 @@ Singapore waxay ku jirtaa kaalinta 5aad ee Qiimaynta Horumarka Aadanaha Qaramada
 [[File:Proclamation of Malaysia by Singapore, North Borneo and Sarawak, 1963.jpg|thumb|upright=0.9|right|The founding father of modern Singapore, [[Lee Kuan Yew]], declaring the formation of the Federation of Malaysia on 16 September 1963 in Singapore, with Sabah and Sarawak also celebrating along.]]
 
 
-==Visa Singabuur'''''Italic text'''''==
+==Visa Singabuur==
 
-[[2019]]-<s>India</s>
-singapore markii ay malaysia iska tuureen oo ay dhaheen weaxaad tihiin dolwad fagri ah 1965 madaxweynodooda wuxuu ku hor ooyey caamirada
+2019-<s>India</s>
 
 
 
